# protobuf-rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: employee_json.rs  employee_pb.rs  employees.proto  lib.rs  main.rs
