[package]
name = "protobuf-rust"
version = "0.1.0"
edition = "2021"
description = "A simple program to demonstrate the performance difference between Protocol Buffers and JSON"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
prost = "0.11"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
clap = { version = "4.3.11", features = ["derive"] }

[build-dependencies]
prost-build = "0.11"
